# py_reminder

./: .gitignore  LICENSE  README.md  py_reminder.toml  pyproject.toml  setup.py
py_reminder/: __init__.py  py_reminder.py
py_reminder.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: disable.py  monitor.py  mute.py
