[project]
name = "py_reminder"
version = "1.0.1"
authors = [
  { name="Wenzhi Ding", email="wenzhi.ding@foxmail.com" },
]
description = "A convenient email sender for monitoring your task"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Wenzhi-Ding/py_reminder"
"Bug Tracker" = "https://github.com/Wenzhi-Ding/py_reminder/issues"

[tool.setuptools]
packages = ["py_reminder"]